--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="form-check mt-3">
 
-                        Not a member? <a href="javascript:void(0)" routerLink="/register2">Register Here!</a>
+                        Not a member? <a href="javascript:void(0)" routerLink="/register">Register Here!</a>
 
                     </div>
                 </form>
